[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-risk"
version = "0.1.0"
description = "Predict social media addiction level or productivity loss from structured features."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.2",
  "numpy>=2.0",
  "scikit-learn>=1.5",
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "joblib>=1.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
